--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Juguemos con Los Simpson</h1>
+    <h1>Juguemos con Los Simpsons</h1>
 
     <script src="javascript/main.js" > </script>
 
