Agregando bootstrap y secciones

--- a/pages/personajes.html
+++ b/pages/personajes.html
@@ -15,7 +15,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light ">
         <div class="container-fluid color-nav">
-            <a class="navbar-brand enlace-pregunta enlace-header" href="index.html">Inicio</a>
+            <a class="navbar-brand enlace-pregunta enlace-header" href="../index.html">Inicio</a>
             <button class="navbar-toggler color-boton" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -23,10 +23,10 @@
             <div class="collapse navbar-collapse div-nav" id="navbarNavDropdown">
                 <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active enlace-header" aria-current="page" href="pages/personajes.html">Personajes</a>
+                <a class="nav-link active enlace-header" aria-current="page" href="personajes.html">Personajes</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link enlace-header" href="pages/preguntas.html">10 preguntas</a>
+                <a class="nav-link enlace-header" href="preguntas.html">10 preguntas</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Pricing</a>
@@ -48,35 +48,13 @@
         </div>
     </nav>
 
-    <h1 class="h1">Juguemos con Los Simpsons</h1>
+    <h1 class="h1">Personajes principales</h1>
 
-    <div class="d-flex justify-content-center aling-items-center mt-5">
 
-    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-inner asd">
-        <div class="carousel-item active">
-          <img src="img-carrousel/img1.jpg" class="d-block  img-carrousel" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img-carrousel/img2.jpg" class="d-block  img-carrousel" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img-carrousel/img3.jpg" class="d-block  img-carrousel" alt="...">
-        </div>
-      </div>
-      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-      </button>
-      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-      </button>
-    </div>
-
-  </div>
 
     
+
+    <script src="../javascript/mainpersonajes.js" > </script>
 
     <script src="../bootstrap-5.1.3-dist/js/bootstrap.min.js"> </script>
 
