Agregue seccion biografia

--- a/index.html
+++ b/index.html
@@ -29,20 +29,9 @@
                 <a class="nav-link enlace-header" href="pages/preguntas.html">10 preguntas</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Pricing</a>
+                <a class="nav-link active enlace-header" aria-current="page" href="pages/biografia.html">Biografia</a>
               </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Dropdown link
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                  <li><a class="dropdown-item" href="#">Action</a></li>
-                  <li><a class="dropdown-item" href="#">Another action</a></li>
-                  <li><a class="dropdown-item" href="#">Something else here</a></li>
-                </ul>
-              </li>
-
-
+              
                 </ul>
             </div>
         </div>
@@ -53,7 +42,7 @@
     <div class="d-flex justify-content-center aling-items-center mt-5">
 
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
-      <div class="carousel-inner asd">
+      <div class="carousel-inner imgenes-carrousel">
         <div class="carousel-item active">
           <img src="img-carrousel/img1.jpg" class="d-block  img-carrousel" alt="...">
         </div>
