--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -60,7 +60,7 @@
         </div>
       </div>
 
-      <div class="card asd" style="width: 18rem;">
+      <div class="card div-card" style="width: 18rem;">
         <img src="../img-personajes/bart.jpg" class="card-img-top w-100" alt="...">
         <div class="card-body">
           <h5 class="card-title">Bart Simpson</h5>
@@ -69,7 +69,7 @@
         </div>
       </div>
 
-      <div class="card asd" style="width: 18rem;">
+      <div class="card div-card" style="width: 18rem;">
         <img src="../img-personajes/lisa.jpg" class="card-img-top w-100" alt="...">
         <div class="card-body">
           <h5 class="card-title">Lisa Simpson</h5>
@@ -78,7 +78,7 @@
         </div>
       </div>
 
-      <div class="card asd" style="width: 18rem;">
+      <div class="card div-card" style="width: 18rem;">
         <img src="../img-personajes/maggie.jpg" class="card-img-top w-100" alt="...">
         <div class="card-body">
           <h5 class="card-title">Maggie Simpson</h5>
